--- a/fonts.css
+++ b/fonts.css
@@ -4,6 +4,16 @@
 }
 
 @font-face {
-  font-family: 'Lato';
+  font-family: 'Lato Bold';
   src: url("./assets/fonts/Lato-Bold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato Black';
+  src: url("./assets/fonts/Lato-Black.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato Light';
+  src: url("./assets/fonts/Lato-Light.ttf") format("ttf");
 }
