--- a/singolo1.css
+++ b/singolo1.css
@@ -1,5 +1,4 @@
 @import url("fonts.css");
-
 * {
   margin: 0;
   padding: 0;
@@ -9,13 +8,18 @@ body {
   font-family: 'Lato', Helvetica, sans-serif;
 }
 
+header {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
 section {
-  padding-left: 41px;
+  padding-left: 40px;
   padding-right: 40px;
 }
 
 .wrapper {
-  max-width: 1020px;
+  width: 1020px;
   margin: 0 auto;
 }
 
@@ -28,14 +32,15 @@ section {
 }
 
 .logo {
-  padding-top: 35px;
-  padding-left: 41px;
+  padding-top: 36px;
   line-height: 12px;
 }
 
 .logo__link {
   font-size: 25px;
-  letter-spacing: -0.5px;
+  font-family: 'Lato Bold', Helvetica, sans-serif;
+  letter-spacing: 2px;
+  font-stretch: ultra-condensed;
   color: #ffffff;
   text-decoration: none;
 }
@@ -46,7 +51,6 @@ section {
 
 .menu {
   display: flex;
-  padding-right: 40px;
   padding-top: 46px;
 }
 
@@ -97,17 +101,97 @@ section {
 }
 
 .slider {
+  position: relative;
   height: 594px;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
 }
 
-.navigation {
-  display: flex;
-  justify-content: space-between;
+.slider__button {
+  position: absolute;
+  top: 281px;
+  height: 27px;
+  width: 16px;
+  cursor: pointer;
 }
 
+.slider__button_left{
+  left: 42px;
+  background-image: url(./assets/img/slider/arrow-left.png);
+}
 
+.slider__button_right{
+  right: 40px;
+  background-image: url(./assets/img/slider/arrow-right.png);
+}
+
+.slider__button_left:hover{
+  background-image: url(./assets/img/slider/arrow-left-hover.png);
+}
+
+.slider__button_right:hover{
+  background-image: url(./assets/img/slider/arrow-right-hover.png);
+}
+
+.phone {
+  position: absolute;
+  z-index: 0;
+}
+
+.phone_vertical {
+  top: 53px;
+  left: 112px;
+  position: absolute;
+}
+
+.phone_horizontal {
+  bottom: 82px;
+  right: 260px;
+  transform: rotate(90deg);
+}
+
+.phone__display {
+  position: absolute;
+  top: 62px;
+  left: 11px;
+  border: 3px solid #c8c8c8;
+  border-radius: 4px;
+  background-color: #fff;
+  width: 188px;
+  height: 333px;
+}
+
+.phone_vertical .phone__display {
+  background-image: url(./assets/img/slider/Layer\ 6.png);
+  background-position-x: -14px;
+  background-position-y: -135px;
+}
+
+.phone_horizontal .phone__display {
+  left: -62px;
+  top: 135px;
+  transform: rotate(-90deg);
+  height: 188px;
+  width: 333px;
+  bottom: 0px;
+  background-image: url(./assets/img/slider/Layer\ 5.png);
+  background-position-x: -124.5px;
+  background-position-y: -119px;
+}
+
+.phone__shadow {
+  height: 483px;
+  width: 240px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  background-image: url(./assets/img/slider/Shadow.png);
+}
+
+.phone_horizontal .phone__shadow {
+  transform: rotateY(-180deg);
+  top: -26px;
+}
 
 .services {
   height: 435px;
@@ -118,12 +202,15 @@ section {
 
 .services__title {
   font-size: 30px;
+  font-family: 'Lato Black', Helvetica, sans-serif;
   color: #666d89;
 }
 
 .services__description {
   padding-top: 17px;
   margin-bottom: 14px;
+  font-size: 16px;
+  font-family: 'Lato Light', Helvetica, sans-serif;
   color: #767e9e;
   letter-spacing: 0.6px;
   line-height: 31px;
@@ -138,8 +225,9 @@ section {
 .service {
   display: flex;
   width: 299px;
-  padding-top: 29px;
-  margin-right: 20px;
+  padding-left: 1px;
+  padding-top: 28px;
+  margin-right: 19px;
 }
 
 .service:nth-child(3n) {
@@ -148,7 +236,7 @@ section {
 
 .service__img {
   align-self: flex-start;
-  margin-right: 22px;
+  margin-right: 20px;
   margin-top: 5px;
   padding: 11px;
   width: 33px;
@@ -158,19 +246,22 @@ section {
 }
 
 .service__title {
+  font-family: 'Lato Black', Helvetica, sans-serif;
   color: #666d89;
+  word-spacing: -1px;
   letter-spacing: -0.5px;
 }
 
 .service:nth-child(3n) .service__title {
-  letter-spacing: -0.2px;
+  letter-spacing: -0px;
 }
 
 .service__text {
   padding-top: 9px;
   color: #767e9e;
-  font-size: 13px;
+  font-size: 12px;
   letter-spacing: -0.5px;
   line-height: 21px;
   text-align: justify;
+  word-spacing: 3px;
 }
