--- a/singolo2.css
+++ b/singolo2.css
@@ -1,4 +1,5 @@
 @import url("./fonts.css");
+
 body {
     font-family: 'Lato', Helvetica, sans-serif;
 }
@@ -14,29 +15,30 @@ section {
 }
 
 .portfolio {
-    height: 865px;
+    height: 864px;
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
 }
 
 .portfolio__title {
     margin-top: 0;
-    margin-bottom: 23px;
+    margin-bottom: 24px;
     padding-top: 60px;
     font-size: 31px;
     color: #666d89;
     font-family: 'Lato Black', Helvetica, sans-serif;
+    letter-spacing: -0.7px;
 }
 
 .portfolio__text {
     margin-bottom: 0;
     font-size: 18px;
     color: #767e9e;
-    letter-spacing: -0.33px;
+    letter-spacing: -0.22px;
 }
 
 .portfolio__filter {
-    margin-top: 16px;
+    margin-top: 15px;
     margin-bottom: 19px;
     padding: 0;
     padding-left: 1px;
@@ -56,6 +58,11 @@ section {
     border: 1px solid #666d89;
     border-radius: 5px;
     cursor: pointer;
+    transition: 0.3s linear;
+}
+
+.portfolio__filter__tag:last-child {
+    padding-left: 6px;
 }
 
 .portfolio__filter__tag:hover {
@@ -73,6 +80,11 @@ section {
     flex-wrap: wrap;
 }
 
+.portfolio__layout {
+    height: 621px;
+    overflow: hidden;
+}
+
 .portfolio__item {
     margin-right: 20px;
     margin-bottom: 20px;
@@ -80,4 +92,142 @@ section {
 
 .portfolio__item:nth-child(4n) {
     margin-right: 0px;
+}
+
+.about-us {
+    height: 693px;
+    padding-top: 35px;
+    background-color: #f2f2f2;
+    border-bottom: 6px solid #ffffff;
+}
+
+.about-us__title {
+    margin-bottom: 19px;
+    font-size: 30px;
+    font-family: 'Lato Black', Helvetica, sans-serif;
+    color: #666d89;
+    letter-spacing: -0.1px;
+}
+
+.about-us__text {
+    font-family: 'Lato Light', Helvetica, sans-serif;
+    font-size: 17px;
+    color: #767e9e;
+    line-height: 30px;
+    text-align: justify;
+    letter-spacing: 0.41px;
+}
+
+.column-3-layout {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.team {
+    padding-top: 27.5px;
+}
+
+.team__member {
+    width: 300px;
+    margin-right: 19px;
+}
+
+.team__member:last-child img{
+    padding-left: 1px;
+}
+
+.team__member:last-child {
+    margin-right: 0px;
+    padding-left: 1px;
+}
+
+.team__member__name {
+    margin-bottom: 8.5px;
+    margin-left: 0px;
+    margin-top: 11.8px;
+    font-size: 19px;
+    color: #666d89;
+    letter-spacing: -0.4px;
+}
+
+.team__member:first-child .team__member__name {
+    margin-left: -1px;
+}
+
+.team__member__description {
+    margin: 0;
+    font-size: 12px;
+    color: #767e9e;
+    text-align: justify;
+    line-height: 21px;
+}
+
+.team__member:first-child .team__member__description {
+    letter-spacing: -0.07px;
+}
+
+.socials {
+    padding-top: 8px;
+}
+
+.socials__icons {
+    display: flex;
+    padding-left: 1px;
+    list-style: none;
+}
+
+.socials__button {
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    margin-right: 8px;
+    border: 1px solid #6a718c;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.3s linear;
+}
+
+.socials__button:hover {
+    border-color: #ffffff;
+}
+
+.socials__icon {
+    width: 14px;
+    height: 14px;
+    margin: 8px 8px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    transition: 0.3s linear;
+}
+
+.socials__icon_facebook {
+    background-image: url(./assets/img/socials/facebook.svg);
+}
+
+.socials__icon_google-plus {
+    background-image: url(./assets/img/socials/google.svg);
+}
+
+.socials__icon_twitter {
+    background-image: url(./assets/img/socials/twitter.svg);
+}
+
+.socials__icon_linkedin {
+    background-image: url(./assets/img/socials/linkedin.svg);
+}
+
+.socials__button:hover .socials__icon_facebook {
+    background-image: url(./assets/img/socials/facebook-hover.svg);
+}
+
+.socials__button:hover .socials__icon_google-plus {
+    background-image: url(./assets/img/socials/google-hover.svg);
+}
+
+.socials__button:hover .socials__icon_twitter {
+    background-image: url(./assets/img/socials/twitter-hover.svg);
+}
+
+.socials__button:hover .socials__icon_linkedin {
+    background-image: url(./assets/img/socials/linkedin-hover.svg);
 }
