--- a/singolo3.css
+++ b/singolo3.css
@@ -2,7 +2,7 @@
 
 
 body {
-    font-family: 'Lato', Helvetica, sans-serif;
+    font-family: "Lato", Helvetica, sans-serif;
 }
 
 section {
@@ -13,4 +13,266 @@ section {
 .wrapper {
     width: 1020px;
     margin: 0 auto;
+}
+
+.contacts {
+    height: 612px;
+    padding-top: 36px;
+    background-color: #f06c64;
+    border-bottom: 6px solid #ea676b;
+}
+
+.contacts__title {
+    margin: 24px 0 17px;
+    font-size: 31px;
+    color: #f0d8d9;
+    font-family: "Lato Black", Helvetica, sans-serif;
+    letter-spacing: -0.02em;
+}
+
+.contacts__text {
+    margin-top: 17px;
+    margin-bottom: 23.5px;
+    font-size: 18px;
+    line-height: 30.5px;
+    color: #f0d8d9;
+    letter-spacing: -0.014em;
+    text-align: justify;
+}
+
+.column-2-layout {
+    display: flex;
+}
+
+.contacts__form {
+    width: 616px;
+    margin-right: 23px;
+    padding-top: 20px;
+}
+
+input[type="text"] {
+    display: block;
+    width: 96%;
+    padding: 8px 14px 12px;
+    margin-bottom: 16px;
+    border: none;
+    background-color: #d6564f;
+    border-radius: 5px;
+}
+
+input[type="text"]::placeholder {
+    color: #e87878;
+    font-size: 12px;
+}
+
+.contacts__form__message {
+    display: block;
+    width: 614px;
+    margin-bottom: 16px;
+}
+
+.contacts__information {
+    width: 300px;
+}
+
+.contacts__information__title {
+    margin-top: 18px;
+    margin-bottom: 8px;
+    color: #f0d8d9;
+    letter-spacing: -0.25px;
+}
+
+.contacts__information__text {
+    margin-top: 7px;
+    margin-bottom: 25px;
+    font-size: 12px;
+    text-align: justify;
+    line-height: 21.9px;
+    letter-spacing: -0.14px;
+    color: #f0d8d9;
+}
+
+.contacts__information__address {
+    margin-bottom: 8px;
+    padding-left: 24px;
+    position: relative;
+    font-size: 12px;
+    color: #f0d8d9;
+}
+
+.contacts__information__address::before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 4px;
+    width: 12px;
+    height: 12px;
+    background-image: url(./assets/img/contacts/map_icon.png);
+    background-repeat: no-repeat;
+}
+
+.contacts__information__phone {
+    display: block;
+    margin-bottom: 8px;
+    width: max-content;
+    padding-left: 24px;
+    position: relative;
+    font-size: 12px;
+    color: #f0d8d9;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.contacts__information__phone:hover {
+    color: #e8a77e;
+}
+
+.contacts__information__phone::before {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 2px;
+    width: 12px;
+    height: 12px;
+    background-image: url(./assets/img/contacts/tel_icon.png);
+    background-repeat: no-repeat;
+}
+
+.contacts__information__mail {
+    display: block;
+    width: max-content;
+    padding-left: 24px;
+    position: relative;
+    font-size: 12px;
+    color: #f0d8d9;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.contacts__information__mail:hover {
+    color: #e8a77e;
+}
+
+.contacts__information__mail::before {
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 1px;
+    width: 13px;
+    height: 12px;
+    background-image: url(./assets/img/contacts/mail_icon.png);
+    background-repeat: no-repeat;
+}
+
+.contacts__form__message {
+    width: 96%;
+    padding: 9px 14px 12px;
+    background-color: #d6564f;
+    border: none;
+    border-radius: 5px;
+    font-size: 12px;
+    color: #f08688;
+    resize: none;
+}
+
+.contacts__form__submit {
+    padding: 5px 15px;
+    background-color: transparent;
+    border: 2px solid #f0d8d9;
+    border-radius: 5px;
+    color: #f0d8d9;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.contacts__form__submit:hover {
+    border-color: #d6564f;
+    color: #d6564f;
+}
+
+.footer {
+    height: 76px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #2d303a;
+}
+
+.footer__copyright {
+    font-size: 12px;
+    color: #666d89;
+    padding: 19px 41px;
+    letter-spacing: -0.1px;
+}
+
+
+.socials {
+    margin-top: 24px;
+}
+
+.socials__icons {
+    display: flex;
+    padding-left: 1px;
+    list-style: none;
+}
+
+.socials__button {
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    margin-right: 8px;
+    background-color: transparent;
+    border: 1px solid #6a718c;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.3s linear;
+}
+
+.socials__button:hover {
+    border-color: #ffffff;
+}
+
+.socials__icon {
+    width: 14px;
+    height: 14px;
+    margin: 8px 8px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    transition: 0.3s linear;
+}
+
+.socials__icon_facebook {
+    background-image: url(./assets/img/socials/facebook.svg);
+}
+
+.socials__icon_google-plus {
+    background-image: url(./assets/img/socials/google.svg);
+}
+
+.socials__icon_twitter {
+    background-image: url(./assets/img/socials/twitter.svg);
+}
+
+.socials__icon_linkedin {
+    background-image: url(./assets/img/socials/linkedin.svg);
+}
+
+.socials__button:hover .socials__icon_facebook {
+    background-image: url(./assets/img/socials/facebook-hover.svg);
+}
+
+.socials__button:hover .socials__icon_google-plus {
+    background-image: url(./assets/img/socials/google-hover.svg);
+}
+
+.socials__button:hover .socials__icon_twitter {
+    background-image: url(./assets/img/socials/twitter-hover.svg);
+}
+
+.socials__button:hover .socials__icon_linkedin {
+    background-image: url(./assets/img/socials/linkedin-hover.svg);
+}
+
+.socials__footer{
+    margin: 6px;
+    padding-right: 26px;
 }
