--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ header {
   padding-right: 40px;
 }
 
+main {
+  margin-top: 95px;
+}
+
 section {
   padding-left: 40px;
   padding-right: 40px;
@@ -20,11 +24,15 @@ section {
 }
 
 .header {
+  width: calc(1020px - 80px);
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
   height: 89px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
+  z-index: 1;
 }
 
 .logo {
@@ -99,9 +107,34 @@ section {
 .slider {
   position: relative;
   height: 594px;
-  background-color: #f06c64;
+  padding: 0;  
   border-bottom: 6px solid #ea676b;
+  overflow: hidden;
 }
+
+.slider__container {
+  height: 100%;
+  display: flex;
+  transition: transform 0.6s ease;
+}
+
+.slider__item {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  flex: 0 0 100%;
+}
+
+.slider__first{
+  background-color: #f06c64;
+}
+
+.slider__second__image{  
+  height: 100%;
+  width: 100%;
+  background-image: url(./assets/img/slider/Slide-2.png);
+}
+
 
 .slider__button {
   position: absolute;
@@ -112,11 +145,13 @@ section {
 }
 
 .slider__button_left {
+  z-index: 9;
   left: 42px;
   background-image: url(./assets/img/slider/arrow-left.png);
 }
 
 .slider__button_right {
+  z-index: 9;
   right: 40px;
   background-image: url(./assets/img/slider/arrow-right.png);
 }
@@ -152,15 +187,18 @@ section {
   left: 11px;
   border: 3px solid #c8c8c8;
   border-radius: 4px;
-  background-color: #fff;
+  background-color: #000;
   width: 188px;
   height: 333px;
 }
 
 .phone_vertical .phone__display {
-  background-image: url(./assets/img/slider/Layer\ 6.png);
   background-position-x: -14px;
   background-position-y: -135px;
+}
+
+.phone_vertical .phone__display_showed {
+  background-image: url(./assets/img/slider/Layer6.png);
 }
 
 .phone_horizontal .phone__display {
@@ -170,9 +208,12 @@ section {
   height: 188px;
   width: 333px;
   bottom: 0px;
-  background-image: url(./assets/img/slider/Layer\ 5.png);
   background-position-x: -124.5px;
   background-position-y: -119px;
+}
+
+.phone_horizontal .phone__display_showed {
+  background-image: url(./assets/img/slider/Layer5.png);
 }
 
 .phone__shadow {
@@ -267,7 +308,7 @@ section {
 }
 
 .portfolio {
-  height: 864px;
+  height: 863px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
@@ -338,8 +379,14 @@ section {
 }
 
 .portfolio__item {
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-right: 6px;
+  margin-bottom: 6px;
+  border: 5px solid transparent;
+  cursor: pointer;
+}
+
+.portfolio__item_active {
+  border-color: #F06C64;
 }
 
 .portfolio__item:nth-child(4n) {
@@ -354,7 +401,7 @@ section {
 }
 
 .about-us__title {
-  margin-bottom: 19px;
+  margin-bottom: 20px;
   font-size: 30px;
   font-family: "Lato Black", Helvetica, sans-serif;
   color: #666d89;
@@ -429,8 +476,8 @@ section {
 }
 
 .socials__button {
-  width: 32px;
-  height: 32px;
+  width: 30px;
+  height: 30px;
   padding: 0;
   margin-right: 8px;
   background-color: transparent;
@@ -493,7 +540,7 @@ section {
 }
 
 .contacts__title {
-  margin: 24px 0 17px;
+  margin: 24px 0 18px;
   font-size: 31px;
   color: #f0d8d9;
   font-family: "Lato Black", Helvetica, sans-serif;
@@ -534,7 +581,8 @@ input[type="email"] {
 }
 
 input[type="text"]::placeholder,
-input[type="email"]::placeholder {
+input[type="email"]::placeholder,
+textarea::placeholder {
   color: #e87878;
   font-size: 12px;
 }
@@ -553,7 +601,7 @@ input[type="email"]:focus:invalid {
   border: none;
   border-radius: 5px;
   font-size: 12px;
-  color: #e87878;
+  color: #f0d8d9;
   resize: none;
 }
 
@@ -577,7 +625,7 @@ input[type="email"]:focus:invalid {
 }
 
 .contacts__information__title {
-  margin-top: 18px;
+  margin-top: 19px;
   margin-bottom: 8px;
   color: #f0d8d9;
   letter-spacing: -0.25px;
@@ -585,7 +633,7 @@ input[type="email"]:focus:invalid {
 
 .contacts__information__text {
   margin-top: 7px;
-  margin-bottom: 25px;
+  margin-bottom: 24px;
   font-size: 12px;
   text-align: justify;
   line-height: 22px;
@@ -614,7 +662,7 @@ input[type="email"]:focus:invalid {
 
 .contacts__information__phone {
   display: block;
-  margin-bottom: 8px;
+  margin-bottom: 9px;
   width: max-content;
   padding-left: 24px;
   position: relative;
@@ -683,6 +731,47 @@ input[type="email"]:focus:invalid {
   padding-top: 5px;
   padding-right: 32px;
 }
+
+.layout {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vw;
+  width: 100vw;
+  top: -75px;
+  z-index: 9;
+  background: rgba(69, 69, 69, 0.5);
+}
+
+.modal {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  top: 40vh;
+  background-color: #f06c64;
+  padding: 20px;
+  border-radius: 10px;
+  color: #f0d8d9;
+}
+
+.modal_close {
+  position: absolute;
+  bottom: 20px;
+  padding: 5px 15px;
+  background-color: transparent;
+  border: 2px solid #f0d8d9;
+  border-radius: 5px;
+  color: #f0d8d9;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.modal_close:hover {
+  border-color: #d6564f;
+  color: #d6564f;
+}
+
 
 @-moz-document url-prefix() {
   .menu__item {
