--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body {
   font-family: "Lato", Helvetica, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
+}
+
 header {
   padding-left: 40px;
   padding-right: 40px;
-}
-
-main {
-  margin-top: 95px;
 }
 
 section {
@@ -25,14 +26,14 @@ section {
 
 .header {
   width: calc(1020px - 80px);
-  position: fixed;
+  position: sticky;
   top: 0;
   display: flex;
   justify-content: space-between;
   height: 89px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
-  z-index: 1;
+  z-index: 99;
 }
 
 .logo {
@@ -68,7 +69,6 @@ section {
   font-size: 12px;
   color: #ffffff;
   text-transform: uppercase;
-  cursor: pointer;
   transition: 0.1s linear;
   list-style: none;
 }
@@ -107,7 +107,7 @@ section {
 .slider {
   position: relative;
   height: 594px;
-  padding: 0;  
+  padding: 0;
   border-bottom: 6px solid #ea676b;
   overflow: hidden;
 }
@@ -125,11 +125,11 @@ section {
   flex: 0 0 100%;
 }
 
-.slider__first{
+.slider__first {
   background-color: #f06c64;
 }
 
-.slider__second__image{  
+.slider__second__image {
   height: 100%;
   width: 100%;
   background-image: url(./assets/img/slider/Slide-2.png);
@@ -658,6 +658,7 @@ input[type="email"]:focus:invalid {
   height: 12px;
   background-image: url(./assets/img/contacts/map_icon.png);
   background-repeat: no-repeat;
+  cursor: ;
 }
 
 .contacts__information__phone {
